# OpenXR-API-Layer-Template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: extension_list_helper.cmake
src/: layer.cpp  layer.hpp  layer_bootstrap.cpp  layer_bootstrap.hpp  layer_config.hpp.template  layer_dllmain.cpp  layer_shims.cpp  layer_shims.hpp  manifest.json.template  manifest.json.template.license
